Stop using deprecated APIs
This addresses the following lint warnings found during build.

* [deprecation] finalize() in Object has been deprecated
* [deprecation] newInstance() in Class has been deprecated
* [deprecation] Boolean(boolean) in Boolean has been deprecated

Change-Id: I6898217f359423050d7c6378c7ef2fc456ac599d